<resources>
    <string name="app_name">Punto4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ladocu">Lado</string>
    <string name="calcular">Calcular</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="radio">Radio</string>
    <string name="resultado">Resultado</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="triangulo">Triángulo</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="circulo">Círculo</string>
    <string name="emptycuadro">Por favor ingrese el lado del cuadrado</string>
    <string name="emptytriangulobase">Favor ingrese la base del triángulo</string>
    <string name="emptytrianguloaltura">Favor ingrese la altura del triángulo</string>
    <string name="emptyrectangulobase">Favor ingrese la base del rectángulo</string>
    <string name="emptyrectanguloaltura">Favor ingrese la altura del rectángulo</string>
    <string name="emptycirculo">Favor ingrese el radio del círculo</string>

</resources>
